[project]
name = "rocm-diffusion-for-windows-sl-na"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "diffusers>=0.35.0",
    "huggingface-hub>=0.35.3",
    "protobuf>=6.32.1",
    "sentencepiece>=0.2.1",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers>=4.44.0,<4.50.0",
]

[tool.uv.sources]
torch = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-6.4.4/torch-2.8.0a0%2Bgitfc14c65-cp312-cp312-win_amd64.whl" }
torchaudio = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-6.4.4/torchaudio-2.6.0a0%2B1a8f621-cp312-cp312-win_amd64.whl" }
torchvision = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-6.4.4/torchvision-0.24.0a0%2Bc85f008-cp312-cp312-win_amd64.whl" }
